--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,34 @@
-canvas {
-	cursor: move;
-	width: 100%; 
-	height: 100% ;
-}
-body {
-	margin: 0;
+html {
+  height: 100%;
 }
 
-#drop_pudding{
-	position:absolute;
-	left:100%;
-	top:100%;
-	margin: -160px 0 0 -160px;
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+}
+
+#drop_pudding {
+  position: absolute;
+  left: 100%;
+  top: 100%;
+  margin: -160px 0 0 -160px;
 }
 
 .btn {
-	width: 128px;
-	height: 128px;
-	background-image: url(../data/texture/put_button.png);
-	cursor: pointer;
+  width: 128px;
+  height: 128px;
+  background-image: url(../data/texture/put_button.png);
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: none;
+  appearance: none;
+  cursor: pointer;
+  border-radius: 50%;
 }
